[package]
name = "http3_avro_json_logstash"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
quinn = "0.10"
tokio = { version = "1.28", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
serde_json = "1.0"
rmp-serde = "1.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
bytes = "1.4"
futures = "0.3"
lru = "0.10"
dashmap = "5.4"
rayon = "1.7"
