[package]
name = "http3_avro_json_logstash"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
quinn = "0.10"
rustls = { version = "0.21"}
tokio = { version = "1.40.0", features = ["full"] }
rcgen = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
bytes = "1.4"
thiserror = "1.0"
rmp-serde = "1.1"
serde_json = "1.0.127"
chrono = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1.15"
parking_lot = "0.12"
